# Just-a-downloader

./: README.md  app.py  downloader.py  main.py  pyproject.toml  requirement.txt  test.py
components/: General.py  Icon.py  YouTube.py  download_button.py  download_section.py  header.py  options.py  tabs.py  video_card.py
src/: DL.py  YouTubeDownloader.py  utils.py
src/static/: script.js  style.css
src/templates/: index.html
static/: style.css
templates/: index.html
